Fix too big code on Mobile Safari
See https://stackoverflow.com/questions/3226001 for details.

--- a/src/sass/nhp.sass
+++ b/src/sass/nhp.sass
@@ -53,6 +53,7 @@ body
   width: 100%
   max-width: 1200px
   margin: 0
+  -webkit-text-size-adjust: 100%
 
 .home
   +desktop
